# odoo17-template-repo

./: .pre-commit-config.yaml  .pylintrc  CONTRIBUTING.md  README.md  odoo.conf.example  pyproject.toml  ruff.toml
.external/: README.md
.github/workflows/: pre-commit.yml  unittest.yml
