[tool.poetry]
name = "odoo17-template-repo"
package-mode = false
version = "1.0.0"
description = ""
authors = ["KeDA Tech <developer@keda-tech.com>"]
readme = "README.md"
repository = "https://github.com/KeDA-Tech/odoo17-template-repo"

[tool.poetry.dependencies]
python = "^3.10"
babel = [
    {version = "2.9.1", markers = "python_version < '3.11'"},
    {version = "2.10.3", markers = "python_version >= '3.11'"}
]
chardet = [
    {version = "4.0.0", markers = "python_version < '3.11'"},
    {version = "5.2.0", markers = "python_version >= '3.11'"}
]
cryptography = [
    {version = "3.4.8", markers = "python_version < '3.12'"},
    {version = "42.0.8", markers = "python_version >= '3.12'"}
]
decorator = [
    {version = "4.4.2", markers = "python_version < '3.11'"},
    {version = "5.1.1", markers = "python_version >= '3.11'"}
]
docutils = [
    {version = "0.17", markers = "python_version < '3.11'"},
    {version = "0.20.1", markers = "python_version >= '3.11'"}
]
ebaysdk = "2.1.5"
freezegun = [
    {version = "1.1.0", markers = "python_version < '3.11'"},
    {version = "1.2.1", markers = "python_version >= '3.11'"}
]
gevent = [
    {version = "21.8.0", platform = 'darwin', markers = "python_version == '3.10'"},
    {version = "21.8.0", platform = 'linux', markers = "python_version == '3.10'"},
    {version = "22.10.2", platform = 'darwin', markers = "python_version > '3.10' and python_version < '3.12'"},
    {version = "22.10.2", platform = 'linux', markers = "python_version > '3.10' and python_version < '3.12'"},
    {version = "24.2.1", platform = 'darwin', markers = "python_version >= '3.12'"},
    {version = "24.2.1", platform = 'linux', markers = "python_version >= '3.12'"},
]
greenlet = [
    {version = "1.1.2", platform = 'darwin', markers = "python_version == '3.10'"},
    {version = "1.1.2", platform = 'linux', markers = "python_version == '3.10'"},
    {version = "2.0.2", platform = 'darwin', markers = "python_version > '3.10' and python_version < '3.12'"},
    {version = "2.0.2", platform = 'linux', markers = "python_version > '3.10' and python_version < '3.12'"},
    {version = "3.0.3", platform = 'darwin', markers = "python_version >= '3.12'"},
    {version = "3.0.3", platform = 'linux', markers = "python_version >= '3.12'"}
]
idna = [
    {version = "2.10", markers = "python_version < '3.12'"},
    {version = "3.6", markers = "python_version >= '3.12'"}
]
Jinja2 = [
    {version = "3.0.3", markers = "python_version <= '3.10'"},
    {version = "3.1.2", markers = "python_version > '3.10'"}
]
libsass = [
    {version = "0.20.1", markers = "python_version < '3.11'"},
    {version = "0.22.0", markers = "python_version >= '3.11'"}
]
lxml = [
    {version = "4.8.0", markers = "python_version <= '3.10'"},
    {version = "4.9.3", markers = "python_version > '3.10' and python_version < '3.12'"},
    {version = "5.2.1", markers = "python_version >= '3.12'"},
]
lxml-html-clean = [
    {version = "*", markers = "python_version >= '3.12'"},
]
MarkupSafe = [
    {version = "2.0.1", markers = "python_version <= '3.10'"},
    {version = "2.1.2", markers = "python_version > '3.10' and python_version < '3.12'"},
    {version = "2.1.5", markers = "python_version >= '3.12'"},
]
num2words = [
    {version = "0.5.10", markers = "python_version < '3.12'"},
    {version = "0.5.13", markers = "python_version >= '3.12'"}
]
ofxparse = "0.21"
passlib = "1.7.4"
Pillow = [
    {version = "9.0.1", markers = "python_version <= '3.10'"},
    {version = "9.4.0", markers = "python_version > '3.10' and python_version < '3.12'"},
    {version = "10.2.0", markers = "python_version >= '3.12'"},
]
polib = "1.1.1"
psutil = [
    {version = "5.9.0", markers = "python_version <= '3.10'"},
    {version = "5.9.4", markers = "python_version > '3.10' and python_version < '3.12'"},
    {version = "5.9.8", markers = "python_version >= '3.12'"},
]
psycopg2 = [
    {version = "2.9.2", markers = "python_version == '3.10'"},
    {version = "2.9.5", markers = "python_version == '3.11'"},
    {version = "2.9.9", markers = "python_version >= '3.12'"},
]
pydot = "1.4.2"
pyopenssl = [
    {version = "21.0.0", markers = "python_version < '3.12'"},
    {version = "24.1.0", markers = "python_version >= '3.12'"}
]
PyPDF2 = [
    {version = "1.26.0", markers = "python_version <= '3.10'"},
    {version = "2.12.1", markers = "python_version > '3.10'"}
]
pypiwin32 = {version = "*", platform = 'win32'}
pyserial = "3.5"
python-dateutil = [
    {version = "2.8.1", markers = "python_version < '3.11'"},
    {version = "2.8.2", markers = "python_version >= '3.11'"}
]
python-ldap = [
    {version = "3.4.0", platform = 'darwin', markers = "python_version < '3.12'"},
    {version = "3.4.0", platform = 'linux', markers = "python_version < '3.12'"},
    {version = "3.4.4", platform = 'darwin', markers = "python_version >= '3.12'"},
    {version = "3.4.4", platform = 'linux', markers = "python_version >= '3.12'"}
]
python-stdnum = [
    {version = "1.17", markers = "python_version < '3.11'"},
    {version = "1.19", markers = "python_version >= '3.11'"}
]
pytz = "*"
pyusb = "1.2.1"
qrcode = [
    {version = "7.3.1", markers = "python_version < '3.11'"},
    {version = "7.4.2", markers = "python_version >= '3.11'"}
]
reportlab = [
    {version = "3.6.8", markers = "python_version <= '3.10'"},
    {version = "3.6.12", markers = "python_version > '3.10' and python_version < '3.12'"},
    {version = "4.1.0", markers = "python_version >= '3.12'"},
]
requests = [
    {version = "2.25.1", markers = "python_version < '3.11'"},
    {version = "2.31.0", markers = "python_version >= '3.11'"}
]
rjsmin = [
    {version = "1.1.0", markers = "python_version < '3.11'"},
    {version = "1.2.0", markers = "python_version >= '3.11'"}
]
rl-renderPM = [
    {version = "4.0.3", platform = 'win32', markers = "python_version >= '3.12'"}
]
urllib3 = [
    {version = "1.26.5", markers = "python_version < '3.12'"},
    {version = "2.0.7", markers = "python_version >= '3.12'"}
]
vobject = "0.9.6.1"
Werkzeug = [
    {version = "2.0.2", markers = "python_version <= '3.10'"},
    {version = "2.2.2", markers = "python_version > '3.10' and python_version <'3.12'"},
    {version = "3.0.1", markers = "python_version >= '3.12'"}
]
xlrd = [
    {version = "1.2.0", markers = "python_version < '3.12'"},
    {version = "2.0.1", markers = "python_version >= '3.12'"}
]
XlsxWriter = [
    {version = "3.0.2", markers = "python_version < '3.12'"},
    {version = "3.1.9", markers = "python_version >= '3.12'"}
]
xlwt = "1.3.0"
zeep = [
    {version = "4.1.0", markers = "python_version < '3.11'"},
    {version = "4.2.1", markers = "python_version >= '3.11'"}
]
odoo = {url = "https://nightly.odoo.com/17.0/nightly/tgz/odoo_17.0.20240908.zip"}

[tool.ruff]
target-version = "py312"
line-length = 88


[tool.ruff.format]
quote-style = "single"
indent-style = "space"
docstring-code-format = true

[tool.ruff.lint]
select = [
    "F",    # pyflakes
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "I",    # isort
    "ERA",  # eradicate
    "T20",  # print
    "N",    # naming
    "C90"   # mccabe
]
ignore = ["N806"]
extend-safe-fixes = []
extend-unsafe-fixes = []

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F", "I"]
"__manifest__.py" = ["B"]

[tool.ruff.lint.isort]
combine-as-imports = true
section-order = [
    "future",
    "standard-library",
    "third-party",
    "odoo",
    "odoo_addons",
    "first-party",
    "local-folder",
]
default-section = "third-party"
known-local-folder = []

[tool.ruff.lint.isort.sections]
odoo = ["odoo"]
odoo_addons = ["odoo.addons"]
